[gd_scene load_steps=4 format=3 uid="uid://bv0hnfn4f1w7t"]

[ext_resource type="Script" uid="uid://civdtgeu74k6j" path="res://Code/UI/Pause_menu/pause_menu.gd" id="1_tynw8"]
[ext_resource type="Theme" uid="uid://dc16uxn7hntw2" path="res://Assets/Themes/black_button.tres" id="2_pncxw"]
[ext_resource type="Texture2D" uid="uid://bsrefb4se6bdx" path="res://Assets/SAMSARA_PACK_GUI/GUI_Global/SVG/Asset 23.svg" id="3_25806"]

[node name="Pause_menu" type="CanvasLayer"]
script = ExtResource("1_tynw8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -46.0
offset_right = 1983.0
offset_bottom = 1121.0
color = Color(0.145098, 0.145098, 0.145098, 0.494118)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1925.0
offset_bottom = 1079.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Controls" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pncxw")
theme_override_font_sizes/font_size = 60
text = "Controls"

[node name="Main_menu" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pncxw")
theme_override_font_sizes/font_size = 60
text = "Back to main menu"

[node name="Exit_confirmation" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1923.0
offset_bottom = 1082.0

[node name="ColorRect" type="ColorRect" parent="Exit_confirmation"]
layout_mode = 0
offset_right = 1934.0
offset_bottom = 1084.0
color = Color(0.145098, 0.145098, 0.145098, 1)

[node name="Asset23" type="Sprite2D" parent="Exit_confirmation"]
position = Vector2(952.5, 298.25)
scale = Vector2(3.00538, 2.49029)
texture = ExtResource("3_25806")

[node name="RichTextLabel" type="RichTextLabel" parent="Exit_confirmation"]
layout_mode = 0
offset_left = 46.0
offset_top = 179.5
offset_right = 1887.0
offset_bottom = 629.5
bbcode_enabled = true
text = "[center][font_size=70
]Returning to main menu [i]will wipe your progress.[/i]
Proceed?"

[node name="CenterContainer" type="CenterContainer" parent="Exit_confirmation"]
layout_mode = 0
offset_top = 496.0
offset_right = 1923.0
offset_bottom = 951.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Exit_confirmation/CenterContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Yes" type="Button" parent="Exit_confirmation/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_pncxw")
theme_override_font_sizes/font_size = 60
text = "Yes"

[node name="No" type="Button" parent="Exit_confirmation/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_pncxw")
theme_override_font_sizes/font_size = 60
text = "No"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Exit_confirmation/CenterContainer/VBoxContainer2/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Exit_confirmation/CenterContainer/VBoxContainer2/No" to="." method="_on_no_pressed"]
